<?xml version="1.0" encoding="utf-8"?>
<!-- Deze xml-file bevat de layout en het ontwerp voor het quiz-fragment -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizFragment">

    <!-- ConstraintLayout wordt gebruikt om de elementen flexibel te plaatsen -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ScrollView maakt het mogelijk om te scrollen als de inhoud groter is dan het scherm -->
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <!-- LinearLayout plaatst de elementen verticaal onder elkaar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- TextView voor het totaal aantal vragen -->
                <TextView
                    android:id="@+id/tvTotalQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalQuestions"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"/>

                <!-- TextView voor de huidige vraag -->
                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/questionPlaceholder"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <!-- Knoppen voor de antwoordopties A tot en met J -->
                <Button
                    android:id="@+id/answerABtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerA"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerBBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerB"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerCBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerC"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerDBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerD"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerEBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerE"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerFBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerF"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerGBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerG"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerHBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerH"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerIBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerI"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <Button
                    android:id="@+id/answerJBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/answerJ"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif"/>

                <!-- Knop om het antwoord in te sturen -->
                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="sans-serif"/>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
